# setuptools-antlr

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py
antlr_distutils/: build_antlr.py
example/: setup.cfg  setup.py
example/foobar/dsl/: Bar.g4  Foo.g4
example/foobar/frontend/: foobar.py
example/hello/frontend/: hello.py
resources/: setup.cfg
samples/foobar/: setup.py
samples/foobar/foobar/dsl/common/: Terminals.g4
setuptools_antlr/: build_antlr.py  command.py  util.py
test/: test_build_antlr.py  test_command.py  test_util.py
test/resources/: CommonTerminals.g4  Hello.g4  SharedRules.g4
test/resources/incomplete/: SomeGrammar.g4
tests/: test_command.py  test_util.py
tests/resources/standalone/: SomeGrammar.g4
