[metadata]
description-file = README.rst

[aliases]
test = pytest

[pytest]
addopts = --cov=antlr_distutils --cov-report html

[coverage:run]
branch = True

[coverage:html]
directory = coverage_report

[flake8]
format = pylint
statistics = True
show-source = True
max-line-length = 120
max-complexity = 10
